Fix ipython.magic() calls in both notebooks and update cell outputs
Replace deprecated .magic() with .run_line_magic() in
grokking-transformerlens.ipynb, matching the earlier fix in
groking-neel.ipynb. Includes updated cell outputs from re-running.

--- a/grokking-transformerlens.ipynb
+++ b/grokking-transformerlens.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "id": "YT9A7qImXXw6"
    },
@@ -45,12 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "1QAAikXFXXw7",
     "outputId": "e69cbf4d-681c-4cf3-cfad-0504d82dae85"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running as a Jupyter notebook - intended for development only!\n"
+     ]
+    }
+   ],
    "source": [
     "# Janky code to do different setup when run in a Colab notebook vs VSCode\n",
     "import os\n",
@@ -73,8 +81,8 @@
     "\n",
     "    ipython = get_ipython()\n",
     "    # Code to automatically update the HookedTransformer code as its edited without restarting the kernel\n",
-    "    ipython.magic(\"load_ext\", \"autoreload\")\n",
-    "    ipython.magic(\"autoreload\", \"2\")\n",
+    "    ipython.run_line_magic(\"load_ext\", \"autoreload\")\n",
+    "    ipython.run_line_magic(\"autoreload\", \"2\")\n",
     "\n",
     "if IN_COLAB or IN_GITHUB:\n",
     "    %pip install transformer_lens\n",
@@ -83,12 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "4O5mJ3XWXXw8",
     "outputId": "b2005ce7-8e37-472c-bcc1-2ffbf20dbbcf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using renderer: notebook_connected\n"
+     ]
+    }
+   ],
    "source": [
     "# Plotly needs a different renderer for VSCode/Notebooks vs Colab argh\n",
     "import plotly.io as pio\n",
@@ -101,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "FLJVEwzNXXw8"
    },
@@ -118,7 +134,18 @@
    "metadata": {
     "id": "N9G0SXPnXXw8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/burny/projects/ai/mechinterp/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning:\n",
+      "\n",
+      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Import stuff\n",
     "import torch\n",
