--- a/grokking-transformerlens.ipynb
+++ b/grokking-transformerlens.ipynb
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "YT9A7qImXXw6"
    },
    "outputs": [],
    "source": [
-    "TRAIN_MODEL = True"
+    "TRAIN_MODEL = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "1QAAikXFXXw7",
     "outputId": "e69cbf4d-681c-4cf3-cfad-0504d82dae85"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "4O5mJ3XWXXw8",
     "outputId": "b2005ce7-8e37-472c-bcc1-2ffbf20dbbcf"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "id": "FLJVEwzNXXw8"
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "N9G0SXPnXXw8"
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "Qo3Mj7HQXXw9"
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "QlgyB6nnXXw-"
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "H4eoWAZQXXw-"
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "dVWqI8frXXw-"
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "2Dgw3vyCXXw_"
    },
@@ -313,12 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "wReiwTfcXXw_",
     "outputId": "4307519b-c837-4739-bbe8-76e7a2f23a01"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  0,   0, 113],\n",
+      "        [  0,   1, 113],\n",
+      "        [  0,   2, 113],\n",
+      "        [  0,   3, 113],\n",
+      "        [  0,   4, 113]], device='cuda:0')\n",
+      "torch.Size([12769, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = torch.stack([a_vector, b_vector, equals_vector], dim=1).to(device)\n",
     "print(dataset[:5])\n",
@@ -327,12 +340,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "0iNRebVsXXw_",
     "outputId": "03c7f84e-a2da-49fd-adbc-b0db2a7bf1a6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([12769])\n",
+      "tensor([0, 1, 2, 3, 4], device='cuda:0')\n"
+     ]
+    }
+   ],
    "source": [
     "labels = (dataset[:, 0] + dataset[:, 1]) % p\n",
     "print(labels.shape)\n",
@@ -350,12 +372,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "jS_eWROjXXw_",
     "outputId": "34054229-d87a-4b27-b385-3f056ddb713c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 21,  31, 113],\n",
+      "        [ 30,  98, 113],\n",
+      "        [ 47,  10, 113],\n",
+      "        [ 86,  21, 113],\n",
+      "        [ 99,  83, 113]], device='cuda:0')\n",
+      "tensor([ 52,  15,  57, 107,  69], device='cuda:0')\n",
+      "torch.Size([3830, 3])\n",
+      "tensor([[ 43,  40, 113],\n",
+      "        [ 31,  42, 113],\n",
+      "        [ 39,  63, 113],\n",
+      "        [ 35,  61, 113],\n",
+      "        [112, 102, 113]], device='cuda:0')\n",
+      "tensor([ 83,  73, 102,  96, 101], device='cuda:0')\n",
+      "torch.Size([8939, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "torch.manual_seed(DATA_SEED)\n",
     "indices = torch.randperm(p*p)\n",
@@ -386,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "hK1ycLBbXXxA"
    },
@@ -412,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "cWOi3f1_XXxA"
    },
@@ -432,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "wJRxaS3LXXxA"
    },
@@ -454,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "vJUB8fl4XXxA"
    },
@@ -465,12 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "v76P4xDtXXxA",
     "outputId": "f8944910-a9f5-4b11-a173-fc22fed76932"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(4.7359, device='cuda:0', dtype=torch.float64, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7330, device='cuda:0', dtype=torch.float64, grad_fn=<NegBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "def loss_fn(logits, labels):\n",
     "    if len(logits.shape)==3:\n",
@@ -489,12 +541,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "Oe0h91TeXXxA",
     "outputId": "727cdf78-e4bb-4ddc-8f36-5b88d74e8ece"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uniform loss:\n",
+      "4.727387818712341\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Uniform loss:\")\n",
     "print(np.log(p))"
@@ -520,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "referenced_widgets": [
@@ -559,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "pZ1UwFwjXXxB"
    },
@@ -581,11 +642,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "pStbjdgGXXxB"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnpicklingError",
+     "evalue": "Weights only load failed. This file can still be loaded, to do so you have two options, \u001b[1mdo those steps only if you trust the source of the checkpoint\u001b[0m. \n\t(1) In PyTorch 2.6, we changed the default value of the `weights_only` argument in `torch.load` from `False` to `True`. Re-running `torch.load` with `weights_only` set to `False` will likely succeed, but it can result in arbitrary code execution. Do it only if you got the file from a trusted source.\n\t(2) Alternatively, to load with `weights_only=True` please check the recommended steps in the following error message.\n\tWeightsUnpickler error: Unsupported global: GLOBAL transformer_lens.HookedTransformerConfig.HookedTransformerConfig was not an allowed global by default. Please use `torch.serialization.add_safe_globals([transformer_lens.HookedTransformerConfig.HookedTransformerConfig])` or the `torch.serialization.safe_globals([transformer_lens.HookedTransformerConfig.HookedTransformerConfig])` context manager to allowlist this global if you trust this class/function.\n\nCheck the documentation of torch.load to learn more about types accepted by default with weights_only https://pytorch.org/docs/stable/generated/torch.load.html.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnpicklingError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m TRAIN_MODEL:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     cached_data = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPTH_LOCATION\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     model.load_state_dict(cached_data[\u001b[33m'\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      4\u001b[39m     model_checkpoints = cached_data[\u001b[33m\"\u001b[39m\u001b[33mcheckpoints\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/ai/mechinterp/.venv/lib/python3.12/site-packages/torch/serialization.py:1548\u001b[39m, in \u001b[36mload\u001b[39m\u001b[34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[39m\n\u001b[32m   1540\u001b[39m                 \u001b[38;5;28;01mreturn\u001b[39;00m _load(\n\u001b[32m   1541\u001b[39m                     opened_zipfile,\n\u001b[32m   1542\u001b[39m                     map_location,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1545\u001b[39m                     **pickle_load_args,\n\u001b[32m   1546\u001b[39m                 )\n\u001b[32m   1547\u001b[39m             \u001b[38;5;28;01mexcept\u001b[39;00m pickle.UnpicklingError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m-> \u001b[39m\u001b[32m1548\u001b[39m                 \u001b[38;5;28;01mraise\u001b[39;00m pickle.UnpicklingError(_get_wo_message(\u001b[38;5;28mstr\u001b[39m(e))) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1549\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m _load(\n\u001b[32m   1550\u001b[39m             opened_zipfile,\n\u001b[32m   1551\u001b[39m             map_location,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1554\u001b[39m             **pickle_load_args,\n\u001b[32m   1555\u001b[39m         )\n\u001b[32m   1556\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mmap:\n",
+      "\u001b[31mUnpicklingError\u001b[39m: Weights only load failed. This file can still be loaded, to do so you have two options, \u001b[1mdo those steps only if you trust the source of the checkpoint\u001b[0m. \n\t(1) In PyTorch 2.6, we changed the default value of the `weights_only` argument in `torch.load` from `False` to `True`. Re-running `torch.load` with `weights_only` set to `False` will likely succeed, but it can result in arbitrary code execution. Do it only if you got the file from a trusted source.\n\t(2) Alternatively, to load with `weights_only=True` please check the recommended steps in the following error message.\n\tWeightsUnpickler error: Unsupported global: GLOBAL transformer_lens.HookedTransformerConfig.HookedTransformerConfig was not an allowed global by default. Please use `torch.serialization.add_safe_globals([transformer_lens.HookedTransformerConfig.HookedTransformerConfig])` or the `torch.serialization.safe_globals([transformer_lens.HookedTransformerConfig.HookedTransformerConfig])` context manager to allowlist this global if you trust this class/function.\n\nCheck the documentation of torch.load to learn more about types accepted by default with weights_only https://pytorch.org/docs/stable/generated/torch.load.html."
+     ]
+    }
+   ],
    "source": [
     "if not TRAIN_MODEL:\n",
     "    cached_data = torch.load(PTH_LOCATION)\n",
@@ -614,7 +688,33 @@
     "id": "ABTV4hYEXXxB",
     "outputId": "8348da15-f56d-4680-9c69-8f3f503f70b9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/burny/projects/ai/mechinterp/.venv/bin/python: No module named pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_losses' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mpip\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minstall git+https://github.com/neelnanda-io/neel-plotly.git\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mneel_plotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m line\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m line([\u001b[43mtrain_losses\u001b[49m[::\u001b[32m100\u001b[39m], test_losses[::\u001b[32m100\u001b[39m]], x=np.arange(\u001b[32m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(train_losses), \u001b[32m100\u001b[39m), xaxis=\u001b[33m\"\u001b[39m\u001b[33mEpoch\u001b[39m\u001b[33m\"\u001b[39m, yaxis=\u001b[33m\"\u001b[39m\u001b[33mLoss\u001b[39m\u001b[33m\"\u001b[39m, log_y=\u001b[38;5;28;01mTrue\u001b[39;00m, title=\u001b[33m\"\u001b[39m\u001b[33mTraining Curve for Modular Addition\u001b[39m\u001b[33m\"\u001b[39m, line_labels=[\u001b[33m'\u001b[39m\u001b[33mtrain\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mtest\u001b[39m\u001b[33m'\u001b[39m], toggle_x=\u001b[38;5;28;01mTrue\u001b[39;00m, toggle_y=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'train_losses' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%pip install git+https://github.com/neelnanda-io/neel-plotly.git\n",
     "from neel_plotly.plot import line\n",
